readability reformat of content continues, fixes to image generator funciton needed still, added more max width to .hentry class controlling max size of post table etc line 1216 in style.css

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -1215,7 +1215,7 @@ span + .edit-link:before,
 
 .hentry {
 	margin: 0 auto 48px;
-	max-width: 672px;
+	max-width: 820px;
 }
 
 .site-content .entry-header,
